vts2/vts2/VTSDLLs/Include95/Nalsapi.h

	
/*typedef struct tagMApacket	{
struct  tagMApacket *maLink;					//linked list pointer		***140
dword	maTrace;								//packet sequence identifier
octet	maLport;								//the logical port
octet	maAlen;									//the length of sadr and dadr really used
octet	maLsap;									//the link service access point
octet	maBroadcast;							//0=no, 1=yes
octet	maReserved[11];							//reserved							***WIN95
octet	maDadr[8];								//octet string destination address
octet	maSadr[8];								//octet string source address
octet	mapad1;									//									***WIN95
word	maNlen;									//length of maNPDU in octets
octet	maNPDU[1497];							//max sized NPDU
octet	mapad2;									//									***WIN95
				} MApacket;
*/
typedef struct tagNALSpacket {	
	struct  tagNALSpacket far *nalsNext;		//linked list pointer
	BOOL	nalsExpectReply;
	BOOL	nalsRequestorisserver;				//TRUE if the requestor is a server;FALSE if client
	BOOL	nalsBroadcast;						//moved									***WIN95
	octet	nalsRxType;							//0=NL packet,1=broadcast or this node AL packet,2=other unsegmented packet
	octet	nalsInvokeID;						//invoke id assigned to request/from reply
	word	nalsRxFlag;							//a NALSAPI success/error code
	word	nalsPri;							//use NALSpriority  here				***WIN95
	word	nalsDnet;							//the destination network				***WIN95
	octet	nalsDlen;							//the length of dadr really used		
	octet	nalsDadr[8];						//octet string destination address
	octet	nalsRlen;							//the length of radr really used
	octet	nalsRadr[8];						//octet string router address
	word	nalsSnet;							//										***WIN95
	octet	nalsSlen;
	octet	nalsSadr[8];						//octet string source address
	octet	nalsLport;							//the logical port (moved)		//***WIN95						***WIN95
	word	nalsAlen;							//length of APDU in octets
	octet far *nalsAPDU;						//points to APDU
	} NALSpacket;
int  APIENTRY NALSAPIinit(word *);
void APIENTRY NALSAPIdeinit(void);
BOOL APIENTRY NALSAPIgetlog(char *);
void APIENTRY NALSAPIputlog(char *);
void APIENTRY NALSAPIreceivefilter(BOOL);
int  APIENTRY NALSAPIgetapdu(NALSpacket *,word,octet *);
int  APIENTRY NALSAPIcopyrequest(NALSpacket *,octet *);
int  APIENTRY NALSAPItransmit(MApacket *);
word APIENTRY NALSAPIgetportlist(char *);
word APIENTRY NALSAPIgetlen(word);
word APIENTRY NALSAPIgetmaxresponse(word);
word APIENTRY NALSAPImaxNPDUlength(word);
void APIENTRY NALSAPIanytobyte(void *,byte *,word);
void APIENTRY NALSAPIbytetoany(byte *,void *,word);