vts2/vts2/VTSDLLs/ptp/ptp.h

int		APIENTRY	ptpConnect(char *);
int		APIENTRY	ptpDisconnect(octet);