vts2/vts2/VB Sources/VTS.BAS


'---------------------------------------VTSAPI32.DLL----------------------------
Public Declare Function VTSAPIgetpropinfo Lib "VTSAPI32.DLL" (ByVal objtype%, ByVal PropIndex%, ByVal pname$, ptype%, pgroup%, pflags%, pet%) As Long
Public Declare Function VTSAPIgetenumtable Lib "VTSAPI32.DLL" (ByVal wpet, ByVal Index%, propstart%, propmax&, ByVal ptext$)
Public Declare Function VTSAPIgetdefaultparsetype Lib "VTSAPI32.DLL" (ByVal PropId&, ByVal hList)
Public Declare Function VTSAPIgetpropertystates Lib "VTSAPI32.DLL" (ByVal choice%, ByVal hwnd&) ' MAG 26 FEB 2001 change hwnd% to hwnd&
Public Declare Function VTSAPIgetpropertystate Lib "VTSAPI32.DLL" (ByVal choice%, ByVal psenum%, ByVal ptext$)
Public Declare Function VTSAPIgetdefaultpropinfo Lib "VTSAPI32.DLL" (ByVal objtype, ByVal PropId&, ptype, pet)
Public Declare Sub ReadTextPICS Lib "VTSAPI32.DLL" (ByVal tp As String, pd As PicsDB, errc As Integer)
Public Declare Sub DeletePICSObject Lib "VTSAPI32.DLL" (ByVal p As Long)
'---------------------------------------NALSERV32.DLL----------------------------
Public Declare Function NALSAPIinit Lib "NALSERV32.DLL" (ver%)
Public Declare Function NALSAPIgetapdu Lib "NALSERV32.DLL" (n As NALSpacket, ByVal apmax, ByVal apdu$)
Public Declare Function NALSAPIcopyrequest Lib "NALSERV32.DLL" (n As NALSpacket, ByVal apdu$)
Public Declare Function NALSAPItransmit Lib "NALSERV32.DLL" (m As MApacket)
Public Declare Function NALSAPIgetportlist Lib "NALSERV32.DLL" (ByVal pl$)
Public Declare Function NALSAPIgetlog Lib "NALSERV32.DLL" (ByVal l$)
Public Declare Function NALSAPIgetlen Lib "NALSERV32.DLL" (ByVal Port)
Public Declare Function NALSAPIgetmaxresponse Lib "NALSERV32.DLL" (ByVal Port)
Public Declare Sub NALSAPIdeinit Lib "NALSERV32.DLL" ()
Public Declare Sub NALSAPIputlog Lib "NALSERV32.DLL" (ByVal l$)
Public Declare Sub NALSAPIreceivefilter Lib "NALSERV32.DLL" (ByVal filt)
Public Declare Function NALSAPImaxNPDUlength Lib "NALSERV32.DLL" (ByVal Port)
Public Declare Sub NALSAPIanytobyte Lib "NALSERV32.DLL" (ap As Any, bp As Byte, ByVal n%)
Public Declare Sub NALSAPIbytetoany Lib "NALSERV32.DLL" (bp As Byte, ap As Any, ByVal n%)
'------------------------------------------PTP.DLL-------------------------------   ***214
Public Declare Function ptpConnect Lib "ptp.dll" (ByVal pass$) As Long
Public Declare Function ptpDisconnect Lib "ptp.dll" (ByVal reason) As Long
'---------------------------------------BACPRIM32.DLL----------------------------
Public Declare Function eDWORD Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal v&, ByVal tag, ByVal sgnd)
Public Declare Function eENUM Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal v As Long) As Long
Public Declare Function eSubscribeCOVService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal ProcID&, ByVal ObjId&, ByVal Cancel, ByVal conf, ByVal Lifetime&)  '***218
Public Declare Function eCOVNotificationService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal apmax, ByVal conf, ByVal ProcID&, ByVal devinstance&, ByVal obid&, ByVal remaining, ByVal vlist)
Public Declare Function eEventNotificationService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal conf, ByVal ProcID&, ByVal devinstance&, ByVal obid&, ts As etimestamp, ByVal nc, ByVal Pri, ByVal evt, ByVal nt, ByVal Msg$, ByVal ackr, ByVal fst, ByVal tst, nv As notifyvalue, ByVal ps)
Public Declare Function eIAmService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal instance&, ByVal maxapdu, ByVal segm, ByVal vid)
Public Declare Function eIHaveService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal devinstance&, ByVal obid&, ByVal obname$)
Public Declare Function eWhoIsService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal haverange, ByVal rlow&, ByVal rhigh&)
Public Declare Function eWhoHasService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal haverange, ByVal rlow&, ByVal rhigh&, ByVal obid&, ByVal obname$)
Public Declare Function eReadPropService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal obid&, ByVal PropId&, ByVal havearray, ByVal arrindex&)
Public Declare Function eReadPropMultipleService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal nprops, pp As PropList)
Public Declare Function eReadPropConditionalService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal maxsize, ByVal selectlogic, ByVal hcrit, ByVal hrefs)
Public Declare Function eWritePropService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal maxsize, ByVal objtype, ByVal inst&, ByVal pstring$)
Public Declare Function eWritePropMultipleService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal maxsize, ByVal nprops, pp As PropList)
Public Declare Function eReinitDeviceService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal rstate, ByVal Password$)
Public Declare Function eTimeSynchService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal yr, ByVal mon, ByVal dy, ByVal dow, ByVal Hours, ByVal Minutes, ByVal Seconds, ByVal hund)
Public Declare Function eDeviceCommControlService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal Duration, ByVal enable, ByVal Password$)
Public Declare Function eGetAlarmSummaryService Lib "BACPRIM32.DLL" (ByVal apdu$)
Public Declare Function eAcknowledgeAlarmService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal ProcID&, ByVal obid&, ByVal evstate, ts As etimestamp, ByVal acksrc$, ackts As etimestamp)
Public Declare Function eTextMessageService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal apdusize, ByVal conf, ByVal devinst&, ByVal Pri, ByVal class$, ByVal Msg$)
Public Declare Function eAtomicReadFileService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal fins&, ByVal recacc, ByVal fstart&, ByVal cnt&)
Public Declare Function eAtomicWriteFileService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal apdumax, ByVal fins&, ByVal recacc, ByVal fstart&, ByVal HexData, ByVal hwnd&) ' add & to hwnd MAG 26 FEB 2001
Public Declare Function eDeleteObjectService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal ObjId&)
Public Declare Function eCreateObjectService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal apdumax, ByVal ObjId&, ByVal useinstance, ByVal hwnd&) ' add & to hwnd MAG
Public Declare Function eListElementService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal apdumax, ByVal svc, ByVal ObjId&, ByVal PropId&, ByVal needarray, ByVal aindex&, ByVal ptype, ByVal pflags, ByVal ep, ByVal hwnd&) ' add & to hwnd MAG
Public Declare Function eVTOpenService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal class, ByVal LocalSession)
Public Declare Function eVTDataService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal maxsize, ByVal RemoteSession, ByVal DataFlag, ByVal ndata, ByVal vtdata$)
Public Declare Function eVTCloseService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal RemoteSession)
Public Declare Function ePrivateTransferService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal maxsize, ByVal conf, ByVal vid, ByVal svcnum, ByVal nparms, ByVal svcparms$)
Public Declare Function eGetEnrollmentSummaryService Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal ackf, ByVal devinst&, ByVal net&, ByVal mlen, ByVal madr$, ByVal ProcID&, ByVal es, ByVal et, ByVal pfn, ByVal pfx, ByVal nf)
Public Declare Function vbDWORD Lib "BACPRIM32.DLL" (ByVal buf$, ByVal mlen) As Long
Public Declare Function vbLONG Lib "BACPRIM32.DLL" (ByVal buf$, ByVal mlen) As Long
Public Declare Function vbREAL Lib "BACPRIM32.DLL" (ByVal buf$) As Single
Public Declare Function vbDOUBLE Lib "BACPRIM32.DLL" (ByVal buf$) As Double
Public Declare Function vbWORD Lib "BACPRIM32.DLL" (ByVal buf$) As Integer
Public Declare Function vbOBJECTID& Lib "BACPRIM32.DLL" (ByVal obtype, ByVal obinst&)
Public Declare Sub vbeREAL Lib "BACPRIM32.DLL" (ByVal buf$, ByVal v As Single) ' MAG 30 JAN 01 v2.26 changed vbeReal to vbeREAL -fix script error
Public Declare Sub vbeDOUBLE Lib "BACPRIM32.DLL" (ByVal buf$, ByVal v As Double)
Public Declare Function eSimpleAckPDU Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal id As Byte, ByVal Service As Byte)
Public Declare Function eErrorPDU Lib "BACPRIM32.DLL" (ByVal apdu$, ByVal id, ByVal eClass As Long, ByVal eCode As Long, ByVal eService As Long)        '***209
'---------------------------------------HTML Help-------------------------------
Public Declare Function HtmlHelp Lib "hhctrl.ocx" Alias "HtmlHelpA" (ByVal hwnd As Long, ByVal hfile$, ByVal CMD As Long, ByVal dw As Long) As Long
'---------------------------------------Windows---------------------------------
Public Declare Function GetWindowsDirectory Lib "kernel32" Alias "GetWindowsDirectoryA" (ByVal lpBuffer As String, ByVal nSize As Long) As Long
Public Declare Function SendMessageArray Lib "user32" Alias "SendMessageA" (ByVal hwnd As Long, ByVal wMsg As Long, ByVal wParam As Long, lParam As Any) As Long
Public Declare Function LoadLibrary Lib "kernel32" Alias "LoadLibraryA" (ByVal lpLibFileName As String) As Long
Public Declare Function GetPrivateProfileInt Lib "kernel32" Alias "GetPrivateProfileIntA" (ByVal lpApplicationName As String, ByVal lpKeyName As String, ByVal nDefault As Long, ByVal lpFileName As String) As Long
Public Declare Function GetPrivateProfileString Lib "kernel32" Alias "GetPrivateProfileStringA" (ByVal lpApplicationName As String, ByVal lpKeyName As Any, ByVal lpDefault As String, ByVal lpReturnedString As String, ByVal nSize As Long, ByVal lpFileName As String) As Long
Public Declare Function WritePrivateProfileString Lib "kernel32" Alias "WritePrivateProfileStringA" (ByVal lpApplicationName As String, ByVal lpKeyName As Any, ByVal lpString As Any, ByVal lpFileName As String) As Long
Public Declare Function GetDeviceCaps Lib "gdi32" (ByVal hdc As Long, ByVal nIndex As Long) As Long
'---------------------------------------DUDAPI32.DLL----------------------------
Public Declare Sub MyDeletePICSObject Lib "dudapi32.DLL" (ByVal p As Long)
Public Declare Function LoadStringRes Lib "dudapi32.DLL" (ByVal id As Integer, ByVal Buffer As String, ByVal Size As Integer) As Integer
Public Declare Sub DrawStdIcon Lib "dudapi32.DLL" (ByVal X As Integer, ByVal y As Integer, ByVal hw As Long, ByVal id As Integer)
Public Declare Sub CpyGenObj Lib "dudapi32.DLL" (GenObj As generic_object, ByVal p As Long)
Public Declare Function GetNextGenObj Lib "dudapi32.DLL" (GenObj As generic_object) As Integer
Public Declare Function FindGenObj Lib "dudapi32.DLL" (ByVal GenObj As Long, ByVal Index As Integer) As Long
Public Declare Function GetPropNameSupported Lib "dudapi32.DLL" (ByVal PropName As String, ByVal i As Integer, ByVal objtype As Integer, ByVal propFlags As String, PropId As Long) As Integer
Public Declare Function GetPropName Lib "dudapi32.DLL" (ByVal PropId As Long, ByVal PropName As String) As Integer
Public Declare Function GetPropValue Lib "dudapi32.DLL" (ByVal Buffer As String, Msg As PVMessage) As Integer
Public Declare Function GetObjType Lib "dudapi32.DLL" (ByVal objtype As Integer, ByVal Buffer As String) As Integer
Public Declare Function GetEnumName Lib "dudapi32.DLL" (ByVal Buffer As String, ByVal objtype As Integer, ByVal PropId As Long, ByVal EnumVal As Integer) As Integer
Public Declare Function GetpObj Lib "dudapi32.DLL" (ByVal pdb As Long, ByVal ObjectId As Long) As Long
Public Declare Function CheckObjTypeDevPics Lib "dudapi32.DLL" (ByVal StdObj As String, ByVal pdbRoot As Long, ByVal resObjDev As String, ByVal resObjPICS As String) As Integer
Public Declare Function CheckConfClass Lib "dudapi32.DLL" (ByVal ConfClass As Integer, ByVal ApplServ As String, ByVal Result As String, ByVal root As Long, ByVal resObj As String, eol As Integer) As Integer
Public Declare Function CheckFunctionalGroup Lib "dudapi32.DLL" (ByVal FuncGroup As Long, ByVal ApplServ As String, ByVal Result As String, ByVal root As Long, ByVal resObj As String, eol As Integer) As Integer
Public Declare Function CMyInt Lib "dudapi32.DLL" (ByVal sInt As String) As Integer
Public Declare Function CMyBigInt Lib "dudapi32.DLL" (ByVal sInt As String) As Integer
Public Declare Function CMyBigLong Lib "dudapi32.DLL" (ByVal sLong As String) As Long
Public Declare Function DevApplServCheck Lib "dudapi32.DLL" (ByVal ApplServ As String, ByVal root As Long, ByVal resApplServ As String) As Integer
Public Declare Function GetObjIdRoot Lib "dudapi32.DLL" (ByVal pdbRoot As Long) As Long
